--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.7",
-    "expo": "^50.0.15",
+    "expo": "^50.0.17",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "^0.73.6",
@@ -20,8 +21,7 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "yup": "^1.4.0",
-    "expo-updates": "~0.24.12"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
